# fractree-search-engine

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
fractree/: elastic_engine.py  main.py  server.py
src/: elastic_engine.py  server.py
tests/: test_elastic_engine.py
utils/: start_elasticsearch.py
