[project]
name = "fractree-search"
version = "0.1.0"
description = "Chaotic search engine"
authors = [
    {name = "Felipe Siconha",email = "felipesiconha@gmail.com"}
]
license = {text = "GPL-3.0 license"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "elasticsearch (>=8.17.2,<9.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "docker (>=7.1.0,<8.0.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
